force-app/main/default/objects/Salary_Detail__c/Salary_Detail__c.object-meta.xml
<CustomObject>
    <label>Salary Detail</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Salary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salary Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>