force-app/main/default/objects/Salary_Detail__c/fields/Housing_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Housing_Allowance__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Housing Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>