force-app/main/default/objects/Salary_Detail__c/validationRules/Cannot_edit_Active_Salary.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_Active_Salary</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISNEW() , $Profile.Name!=&apos;System Administrator&apos; ,(OR(
(AND(ISPICKVAL(Status__c,&apos;Active&apos;),OR(ISCHANGED(Effective_Date__c),ISCHANGED(Total_Salary__c)))),
(ISPICKVAL(PRIORVALUE(Status__c),&apos;Active&apos;)) 
)
))</errorConditionFormula>
    <errorMessage>Active salary details cannot be modified.</errorMessage>
</ValidationRule>